--- a/blog.html
+++ b/blog.html
@@ -12,30 +12,24 @@
 
 <body>
 
-  <nav class="nav-bar">
-    <h1 class="name" a href="./index.html">Courtney's Place</h1>
-    <ul>
-      <li>
+  <header>
+    <div id="logo">
+      <h1 class="cs">Roots</h1>
+    </div>
+    <nav class="small-nav">
+      <a href="./index.html"> home </a>
+      <a href="./about.html"> about me </a>
+      <a href="./contact.html"> contact me </a>
+      <a href="./gallery.html"> my work </a>
+    </nav>
+  </header>
 
-        <a href="./about.html"> about the owner </a>
-      </li>
-      <li>
 
-        <a href="./blog.html"> happenings </a>
-      </li>
-      <li>
 
-        <a href="./contact.html"> contact me </a>
-      </li>
-      <li>
 
-        <a href="./gallery.css"> my work </a>
-      </li>
-    </ul>
-  </nav>
 </body>
 
 
-Blog
+
 
 </html>
