--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 
   <body>
     <div class="main">
-      <h1>Hit Me Up!</h1>
+      <h1>Book an Appointment!</h1>
       <div class="name">
         <input type="text" class="input" placeholder="Name" required>
         <input type="email" class="input" placeholder="Email Address" required>
