--- a/blog.html
+++ b/blog.html
@@ -23,9 +23,24 @@
       <a href="./gallery.html"> my work </a>
     </nav>
   </header>
-
-
-
+  <br>
+   <br>
+<h1 class="title">What's going on at the Salon!?</h1>    
+  <aside>
+      <p>Upcoming events!</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi tempore error voluptatem, et voluptate suscipit quam saepe velit a labore accusantium deleniti eos quas aliquid, eaque, perferendis reprehenderit? Voluptates, expedita!</p>
+      <br>
+      <p> December</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores quisquam quo alias hic cumque a. Numquam delectus ut porro tenetur ea molestiae rem aperiam, doloribus repudiandae maiores nihil explicabo. Iste?</p>
+  <br>
+  <p>January</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit alias molestiae laudantium numquam cupiditate, eos reiciendis aut possimus ratione veniam! Ut sed maiores ipsa illum fuga animi minus sit vitae?</p>
+    </aside>
+  <h1 class="title2">Latest News!</h1>
+    <p class="blog">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum repudiandae suscipit, nemo consectetur dignissimos dolorem possimus hic ratione vero recusandae labore ab quo consequatur vitae soluta illum iusto sed harum?</p>
+    <p class="blog">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum repudiandae suscipit, nemo consectetur dignissimos dolorem possimus hic ratione vero recusandae labore ab quo consequatur vitae soluta illum iusto sed harum?</p>
+    <br>
+<p class="blog">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum repudiandae suscipit, nemo consectetur dignissimos dolorem possimus hic ratione vero recusandae labore ab quo consequatur vitae soluta illum iusto sed harum?</p>
 
 </body>
 
